syntax = "proto3";
package authentication;

service Authenticate {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc Authenticate(AuthRequest) returns ( AuthResponse );
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}
message RegisterSuccess{
  string bearer = 1;
  string refresh = 2;
  string username =3;
  string user_id =4;
}
message RegisterResponse {
  oneof Response {
    RegisterSuccess response = 1;
    RegisterError error = 2;
  }
}
enum RegisterError {
  USERNAME_USED = 0;
  EMAIL_USED = 1;
  USERNAME_TOO_LONG = 2;
}
message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginSuccess {
  string refresh = 1;
  string username=2;
  string user_id =3;
}
message LoginResponse {
  oneof Login {
    LoginSuccess login_success = 1;
    LoginError error = 2;
  }
}
enum LoginError {
  WRONG_USERNAME_OR_PASSWORD = 0;
  NO_USER_FOUND = 1;
}

message RefreshRequest{
  string refresh = 1;
  string user_id = 2;

}
message RefreshResponse{
  string refresh = 1;
  string bearer = 2;
}
message AuthRequest{
  string bearer = 1;
}
message AuthResponse{
  oneof Authenticate{
    AuthSuccess response =1;
    AuthError error =2;
  }
}
message AuthSuccess{
  string user_id = 1;
  bool   is_admin = 2;
}
enum AuthError{
  INVALID_TOKEN = 0;
  EXPIRED_TOKEN =1;
}

